// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<Memo()>
  <span
    className="css-iu2at0"
    data-cy="badge"
  >
    <StringComponent>
      <span>
        string
      </span>
    </StringComponent>
  </span>
</Memo()>
`;

exports[`Badge danger 1`] = `
<Memo()
  appearance="danger"
>
  <span
    className="css-1v2vcel"
    data-cy="badge"
  >
    danger
  </span>
</Memo()>
`;

exports[`Badge default 1`] = `
<Memo()>
  <span
    className="css-iu2at0"
    data-cy="badge"
  >
    default
  </span>
</Memo()>
`;

exports[`Badge outline 1`] = `
<Memo()
  appearance="outline"
>
  <span
    className="css-wrizyw"
    data-cy="badge"
  >
    outline
  </span>
</Memo()>
`;

exports[`Badge primary 1`] = `
<Memo()
  appearance="primary"
>
  <span
    className="css-1bcogwf"
    data-cy="badge"
  >
    primary
  </span>
</Memo()>
`;

exports[`Badge success 1`] = `
<Memo()
  appearance="success"
>
  <span
    className="css-1nxr7gm"
    data-cy="badge"
  >
    success
  </span>
</Memo()>
`;

exports[`Badge warning 1`] = `
<Memo()
  appearance="warning"
>
  <span
    className="css-dsjkko"
    data-cy="badge"
  >
    warning
  </span>
</Memo()>
`;
